# CubeTimer

./: .gitignore  README.md  io.github.vallabhvidy.CubeTimer.json  meson.build  scores.db
.github/workflows/: main.yml
data/: io.github.vallabhvidy.CubeTimer.gschema.xml  io.github.vallabhvidy.CubeTimer.metainfo.xml.in
po/: LINGUAS  POTFILES  cube-timer.pot  pt.po  pt.po~  pt_BR.po  ru.po  ru.po~
src/: cube-timer.gresource.xml  lrucache.py  main.py  meson.build  preferences.py  score.py  scoresmodel.py  scramble.py  timer.py  timercontroller.py  timerlabel.py  utils.py  window.py
src/gtk/: preferences.ui  score.ui  shortcuts-dialog.ui  style-dark.css  style.css  timerlabel.ui  window.ui
